fixed bounty overflow

--- a/app/assets/stylesheets/bounties.scss
+++ b/app/assets/stylesheets/bounties.scss
@@ -12,13 +12,13 @@
 
 #bountyBoard {
   background-color: rgba(86,9,8,1);
-  height: 400px;
+  height: 380px;
   width: 100%;
+  max-height: 400px;
+  overflow-y: scroll;
 }
 
 #bountyList {
-  max-height: 315px;
-  overflow-y: scroll;
   width: 90%;
   margin: 0 auto;
   display: flex;
